configs/tekton/deployments/dashboard_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: gce
    kubernetes.io/ingress.global-static-ip-name: tekton-static-ip
    networking.gke.io/managed-certificates: tekton-kyma-prow
    networking.gke.io/v1beta1.FrontendConfig: tekton-frontend-config
  name: tekton-tls
  namespace: tekton-pipelines
spec:
  rules:
  - host: tekton.build.kyma-project.io
    http:
      paths:
      - backend:
          service:
            name: tekton-dashboard
            port:
              number: 9097
        pathType: ImplementationSpecific
